O端用户模块
